# cosilico-py

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml
cosilico/: client.py  main.py  typing.py
cosilico/data/: colors.py  conversion.py  experiments.py  geopandas.py  geotiff.py  ngff.py  ome.py  scaling.py  transforms.py  types.py  zarr.py
cosilico/data/wrappers/: bioformats.py  external.py
cosilico/supabase/: storage.py  utils.py
cosilico/wrappers/: bioformats.py
cosilico_py/: __main__.py  main.py
cosilico_py/data/: types.py
cosilico_py/supabase/: storage.py  utils.py
scripts/: add_external.sh  download_bftools.sh  download_test_datasets.sh  env_setup.sh
