[project]
name = "cosilico"
version = "0.0.1"
description = "Command line tool and Python client for Cosilico"
authors = [{name = "estorrs", email = "epstorrs@gmail.com"}]
#requires-python = ">= 3.8"
requires-python = ">=3.9,<=3.11.8" # can't be 3.11.9 due to dask bug with spatialdata-io
#requires-python = ">=3.12"
dependencies = ["pydantic-extra-types", "spatialdata-io==0.1.2", "spatialdata==0.1.2"]
#dependencies = ["setuptools", "pydantic-extra-types"]

[project.optional-dependencies]
docs = ["griffe-typingdoc==0.2.2"]
notebook = ["jupyter"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cosilico"]

[tool.pixi.project]
channels = ["conda-forge", "ome"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
cosilico = { path = ".", editable = true }

[tool.pixi.tasks]
download-bioformats = { cmd="bash scripts/download_bftools.sh" }

[tool.pixi.dependencies]
numpy = "*"
scikit-image = ">=0.22.0,<0.23"
typer = ">=0.12.3,<0.13"
typing_extensions = ">=4.12.1,<4.13"
toml = ">=0.10.2,<0.11"
openjdk = ">=22.0.1,<22.1"
validators = ">=0.28.3,<0.29"
supabase = ">=2.5.0,<2.6"
pint = ">=0.23,<1"
geojson-pydantic = ">=1.1.0,<1.2"
matplotlib = ">=3.8.4,<3.9"
zarr = ">=2.18.2,<2.19"
einops = ">=0.8.0,<0.9"
pandas = ">=2.2.2,<2.3"
ome-types = ">=0.5.1.post1,<0.5.2"
bioformats2raw = ">=0.9.1,<0.10"
shapely = ">=2.0.4,<2.1"
geopandas = ">=1.0.0,<1.1"

[tool.pixi.feature.docs.tasks]
serve = { cmd="mkdocs serve" }
deploy = { cmd="mkdocs gh-deploy --force" }

[tool.pixi.feature.docs.dependencies]
mkdocs-material = ">=9.5.24,<9.6"
mkdocs = "1.6.0"
mkdocstrings-python = "1.10.3"
pyyaml = ">=5.3.1,<7.0.0"
pillow = "10.3.0"
cairosvg = "2.7.0"

[tool.pixi.feature.test.tasks]
download-datasets = { cmd="bash scripts/download_test_datasets.sh" }
test = { cmd="pytest" }

[tool.pixi.feature.test.dependencies]
pytest = "8.2.1"

[tool.pixi.feature.notebook.tasks]
launch-jupyter = { cmd="jupyter notebook" }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
notebook = { features = ["notebook"], solve-group = "default" }

[project.scripts]
cosilico = "cosilico.main:app"

[tool.pixi.activation]
scripts = [ "scripts/add_external.sh" ]
